--- a/assets/main.scss
+++ b/assets/main.scss
@@ -387,7 +387,7 @@ img.in-article {
     @media screen and (max-width: 768px) {
       .container,
       .general-main {
-        padding: $spacing-lg $spacing-md;
+        padding: $spacing-xl $spacing-md;
       }
     }
 
