--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -41,7 +41,7 @@ $teal-light: #A7BDDD;
 
 
 /* Fonts */
-$font-family-main: 'IBM Plex Mono', sans-serif;
+$font-family-main: 'Montserrat', sans-serif;
 $font-family-secondary: 'Noto Sans', sans-serif;
 $font-size-base: 12px;
 $font-size-xs: 12px;
