--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -3,9 +3,9 @@ $black: #2F2E31;
 $black-dark: #1C1C1D;
 $black-light: #3D3C40;
 
-$white: #FAF4EC;
+$white: #fcf8f4;
 $white-dark: #F8F0E4;
-$white-light: #FCF7F2;
+$white-light: #fbf8f6;
 
 $blue: #6A7CBE;
 $blue-dark: #404AA4;
