--- a/assets/main.scss
+++ b/assets/main.scss
@@ -34,7 +34,7 @@ h1 {
   font-size: $font-size-mega;
   line-height: $font-size-mega; 
   font-family: $font-family-main, sans-serif;
-  font-weight:500;
+  font-weight:800;
   font-style: italic;
   margin-top: 0;
   margin-bottom: 2rem;
@@ -61,7 +61,10 @@ h2 {
   line-height: $font-size-xxl * $multiplier-sm; 
   font-family: $font-family-main, sans-serif;
   margin-bottom:1rem;
-  font-weight:500;
+  font-weight:800;
+  color: $purple;
+  -webkit-mask-image: url('/public/textures/texture-3-text.png');
+  mask-image: linear-gradient($purple 0%, rgba(0,0,0,0.6) 100%);
 
   @media screen and (max-width: 1000px) {
     font-size: $font-size-xl;
@@ -83,7 +86,7 @@ h3 {
   line-height: $font-size-xl * $multiplier; 
   font-family: $font-family-main, sans-serif;
   margin-bottom:1rem;
-  font-weight:500;
+  font-weight:800;
 
   @media screen and (max-width: 1000px) {
     font-size: $font-size-lg;
