--- a/assets/main.scss
+++ b/assets/main.scss
@@ -62,9 +62,7 @@ h2 {
   font-family: $font-family-main, sans-serif;
   margin-bottom:1rem;
   font-weight:800;
-  color: $purple;
-  -webkit-mask-image: url('/public/textures/texture-3-text.png');
-  mask-image: linear-gradient($purple 0%, rgba(0,0,0,0.6) 100%);
+  color: $red-dark;
 
   @media screen and (max-width: 1000px) {
     font-size: $font-size-xl;
@@ -133,6 +131,18 @@ h5 {
     font-size: $font-size-md;
     line-height: $font-size-md * $multiplier;
   }
+}
+
+p.super-text {
+  font-family: $font-family-main, sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: center;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: rgba($black, 0.3);
 }
 
 p,
