--- a/assets/main.scss
+++ b/assets/main.scss
@@ -62,7 +62,7 @@ h2 {
   font-family: $font-family-main, sans-serif;
   margin-bottom:1rem;
   font-weight:800;
-  color: $red-dark;
+  color: $teal-dark;
 
   @media screen and (max-width: 1000px) {
     font-size: $font-size-xl;
