--- a/assets/labs.scss
+++ b/assets/labs.scss
@@ -30,6 +30,22 @@
     }
   }
 
+  #blank {
+    background: black;
+    border: 1px solid rgba(white, 0.48);
+    box-shadow: inset 0 -4px 4px 0px rgba(white, 0.32), inset 0 0 2px 4px rgba(white, 0.12), 0 14px 1px 0px rgba(black, 0.08), 0 16px 20px 5px rgba(black, 0.32);
+    width: 100%;
+    height: 100%;
+    margin: 15px;
+    min-height: 460px;
+    border-radius: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+
   #phone {
     background: black;
     border: 1px solid rgba(white, 0.48);
