--- a/assets/main.scss
+++ b/assets/main.scss
@@ -96,8 +96,8 @@ h2 {
 }
 
 h3 { 
-  font-size: $font-size-xl; 
-  line-height: $font-size-xl * $multiplier; 
+  font-size: $font-size-lg; 
+  line-height: $font-size-lg * $multiplier; 
   font-family: $font-family-main, sans-serif;
   margin-bottom:1rem;
   font-weight:800;
@@ -117,11 +117,11 @@ h3 {
 }
 
 h4 { 
-  font-size: $font-size-lg; 
-  line-height: $font-size-lg * $multiplier; 
+  font-size: $font-size-md; 
+  line-height: $font-size-md * $multiplier; 
   font-family: $font-family-secondary, sans-serif;
   margin-bottom:1rem;
-  font-weight:500;
+  font-weight:800;
 
   .highlight {
     color: $red-dark;
@@ -243,7 +243,7 @@ small {
 }
 
 ul {
-  margin: 0 0 0 1rem;
+  margin: 0 $spacing-sm $spacing-md $spacing-md;
 }
 
 hr {
