--- a/assets/main.scss
+++ b/assets/main.scss
@@ -457,13 +457,25 @@ input {
 
     .summary {
       background-color: $white-dark;
-      padding: $spacing-md;
       border-radius: $br-lg;
+      width: 100%;
+      max-width: 1020px;
+      padding: $spacing-lg;
+      margin: $spacing-lg 0;
+      font-weight: 400;
+
+      @media screen and (max-width: 1000px){
+        padding: $spacing-md;
+      }
 
       h3 {
         margin-top: 0;
       }
     }
+
+      .dark .summary {
+        background: url("/_nuxt/public/textures/texture-3-bg-dark.png") padding-box, linear-gradient(140deg, #404AA4 -5%, #3c3a3e 15%) border-box;
+      }
 
       @media screen and (max-width: 1000px) {
         .content {
