--- a/assets/main.scss
+++ b/assets/main.scss
@@ -536,7 +536,7 @@ img.in-article {
     @media screen and (max-width: 768px) {
       .container,
       .general-main {
-        padding: $spacing-md $spacing-sm;
+        padding: $spacing-md;
         gap: $spacing-sm;
       }
     }
