Better homepage, updated global styles

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -57,11 +57,11 @@ $multiplier: 1.4;
 $multiplier-sm: 1.14;
 
 /* Border-radius */
-$br-xs: 0.15rem;
-$br-sm: 0.3rem;
-$br-md: 0.6rem;
-$br-lg: 1.2rem;
-$br-xl: 2rem;
+$br-xs: 0;
+$br-sm: 0;
+$br-md: 0;
+$br-lg: 0;
+$br-xl: 0;
 
 /* Spacing */
 $spacing-xxs: 0.25rem;
