Resolving build issues

--- a/assets/labs.scss
+++ b/assets/labs.scss
@@ -2,7 +2,7 @@
 @import 'variables';
 
 #simulator {
-  background: $white-dark url('/textures/texture-3-bg.png') no-repeat center center;
+  background: $white-dark;
   width: 100%;
   border-radius: $br-lg;
   margin: $spacing-lg 0;
