--- a/assets/main.scss
+++ b/assets/main.scss
@@ -117,7 +117,7 @@ h3 {
 }
 
 h4 { 
-  font-size: $font-size-md; 
+  font-size: $font-size-lg; 
   line-height: 140%;  
   font-family: $font-family-main;
   margin: $spacing-md 0 $spacing-sm;
