Themeswitcher update, balanced text

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -13,7 +13,7 @@ $blue-light: #8AA1D2;
 
 $orange: #CAA466;
 $orange-dark: #B5803D;
-$orange-light: #DABF85;
+$orange-light: #f8e1b0;
 
 $green: #5B7D39;
 $green-dark: #374B22;
