--- a/assets/main.scss
+++ b/assets/main.scss
@@ -40,12 +40,22 @@ body {
 
 a {
   color:$blue;
-  text-decoration: underline;
-  font-weight: bold;
+  text-decoration: none;
+  border-bottom: 2px solid lighten($blue, 25%);
+  transition: color, border-bottom 0.28s ease-in-out;
+
+  &:hover {
+    border-bottom: 2px solid $blue;
+  }
 }
 
     .dark a {
       color:$blue-light;
+      border-bottom: 2px solid darken($blue-light, 25%);
+
+      &:hover {
+        border-bottom: 2px solid $blue;
+      }
     }
 
 h1 { 
