More consistency across pages

--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -1,7 +1,7 @@
 /* Colors */
-$black: #2F2E31;
-$black-dark: #1C1C1D;
-$black-light: #3D3C40;
+$black: #171123;
+$black-dark: #080819;
+$black-light: #1f1c29;
 
 $white: #ffffff;
 $white-dark: #f1f0fb;
