Updated thoughts headers to match site styles

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -63,7 +63,7 @@ h1 {
 
   @media screen and (max-width: 768px) {
     font-size: 12vw;
-    line-height: $font-size-max;
+    line-height: 12vw;
   }
 
 }
