--- a/assets/main.scss
+++ b/assets/main.scss
@@ -535,7 +535,7 @@ img.in-article {
 
     @media screen and (max-width: 768px){
       padding: 0rem;
-      margin: $spacing-lg $spacing-md;
+      margin: $spacing-lg 0;
       width: calc(100vw - 4rem);
     }
   }
@@ -841,7 +841,7 @@ img.in-article {
     }
 
 .product-role {
-  margin: $spacing-md 0 0;
+  margin: $spacing-md 0;
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: $spacing-md;
@@ -913,10 +913,9 @@ img.in-article {
 .story-time .codehighlight {
   font-size:0.8rem;
   opacity: 1;
-  background-color: #00000037;
+  background-color: $white-dark;
   padding: 0.1rem 0.3rem;
   border-radius: 4px;
-  border:1px solid #00000037;
 }
 
 .dark .story-time .codehighlight {
