--- a/assets/_variables.scss
+++ b/assets/_variables.scss
@@ -41,8 +41,8 @@ $teal-light: #A7BDDD;
 
 
 /* Fonts */
-$font-family-main: 'Montserrat', sans-serif;
-$font-family-secondary: 'Noto Sans', sans-serif;
+$font-family-main: 'Lexend Deca', sans-serif;
+$font-family-secondary: 'Roboto Sans', sans-serif;
 $font-size-base: 12px;
 $font-size-xs: 12px;
 $font-size-sm: 14px;
