--- a/assets/main.scss
+++ b/assets/main.scss
@@ -53,7 +53,7 @@ h1 {
   font-family: $font-family-main, sans-serif;
   font-weight:500;
   margin-top: 0;
-  margin-bottom: 2rem;
+  margin-bottom: 0;
   padding:0.5rem 0;
 
   @media screen and (max-width: 1200px) {
@@ -84,7 +84,7 @@ h1 {
 h2 { 
   font-size: $font-size-xxl;
   line-height: 140%; 
-  font-family: $font-family-main;
+  font-family: $font-family-secondary;
   margin-bottom:1rem;
   font-weight:400;
 
