Sure, let's just do that

--- a/assets/labs.scss
+++ b/assets/labs.scss
@@ -2,7 +2,7 @@
 @import 'variables';
 
 #simulator {
-  background: $white-dark;
+  background: $black-dark;
   width: 100%;
   border-radius: $br-lg;
   margin: $spacing-lg 0;
