Fixes for projects

--- a/assets/animation.scss
+++ b/assets/animation.scss
@@ -28,3 +28,12 @@
     opacity: 1;
   }
 }
+
+@keyframes clipReveal {
+  from {
+    clip-path: polygon(0 0, 0 0, 0 100%, 0 100%);
+  }
+  to {
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  }
+}
