--- a/assets/products.scss
+++ b/assets/products.scss
@@ -1,6 +1,7 @@
 @import 'variables';
 
 $scatter-color: #017CD0;
+$doodledapp-color: #4431CD;
 
 .product-splash {
   width: 100%;
@@ -65,6 +66,25 @@ $scatter-color: #017CD0;
         animation-delay: 0.6s;
         opacity: 0;
       }
+
+      &.doodledapp-website-show {
+        background-color: $doodledapp-color;
+        background: url(/products/doodledapp/doodledapp-website-show.png) no-repeat center center;
+        background-size: cover;
+        animation: clipReveal 0.44s forwards;
+        animation-delay: 0.3s;
+        opacity: 0;
+      }
+
+      &.scatter-marketplace {
+        background-color: $doodledapp-color;
+        background: url(/products/doodledapp/doodledapp-new.png) no-repeat center center;
+        background-size: cover;
+        animation: clipReveal 0.44s forwards;
+        animation-delay: 0.6s;
+        opacity: 0;
+      }
+
     }
   }
 
@@ -89,6 +109,12 @@ $scatter-color: #017CD0;
         background: url(/products/scatter/scatter-main-mobile.png) no-repeat center center;
         background-size: cover;
       }
+
+      &.doodledapp {
+        background-color: $doodledapp-color;
+        background: url(/products/doodledapp/flow.png) no-repeat center center;
+        background-size: cover;
+      }
     }
 
     .product-intro-brand {
@@ -101,6 +127,10 @@ $scatter-color: #017CD0;
 
       &.scatter {
         background-color: $scatter-color;
+      }
+
+      &.doodledapp {
+        background-color: $doodledapp-color;
       }
     }
   }
